force-app/main/default/objects/Taxas_de_Servicos__c/Taxas_de_Servicos__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>LISTA DE PREÇO DE SERVIÇOS TARIFADOS - VERIFICAR TABELA VIGENTE NO MOMENTO DA SOLICITAÇÃO DE SERVIÇOS EXTRAS</description>
    <label>Taxas de Serviços</label>
</CustomObject>