force-app/main/default/objects/Taxas_de_Servicos__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <description>Descrição dos acessórios, produtos e serviços.</description>
    <label>Descrição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>