force-app/main/default/objects/Taxas_de_Servicos__c/fields/Desinstalacao__c.field-meta.xml
<CustomField>
    <fullName>Desinstalacao__c</fullName>
    <description>Valor referente ao serviço de desinstalação.</description>
    <label>Desinstalação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>