force-app/main/default/objects/Taxas_de_Servicos__c/fields/Taxas__c.field-meta.xml
<CustomField>
    <fullName>Taxas__c</fullName>
    <description>Taxa referente ao serviço prestado</description>
    <label>Taxas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>