force-app/main/default/objects/Taxas_de_Servicos__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Define se é acessório, produto ou outros serviços.</description>
    <label>Tipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>