force-app/main/default/objects/Taxas_de_Servicos__c/fields/Valor_Desinstalacao_e_Reinstalacao__c.field-meta.xml
<CustomField>
    <fullName>Valor_Desinstalacao_e_Reinstalacao__c</fullName>
    <description>Valor referente ao serviço de Desinstalação e Reinstalação.</description>
    <label>Valor Desinstalação e Reinstalação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>