force-app/main/default/objects/Taxas_de_Servicos__c/listViews/Todas_taxas_de_servico.listView-meta.xml
<ListView>
    <fullName>Todas_taxas_de_servico</fullName>
    <columns>NAME</columns>
    <columns>Descricao__c</columns>
    <columns>Tipo__c</columns>
    <columns>Desinstalacao__c</columns>
    <columns>Valor_Desinstalacao_e_Reinstalacao__c</columns>
    <columns>Taxas__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas taxas de serviço</label>
</ListView>